--- a/bibtex/ThesisBibTex.bib
+++ b/bibtex/ThesisBibTex.bib
@@ -732,7 +732,7 @@ argued running time in real scenarios: O(m)},
 
 @InCollection{Avin2016,
   author    = {Chen Avin and Andreas Loukas and Maciej Pacut and Stefan Schmid},
-  booktitle = {Lecture Notes in Computer Science},
+  booktitle = {Proc. 30th International Symposium on Distributed Computing (DISC)},
   publisher = {Springer Berlin Heidelberg},
   title     = {{Online Balanced Repartitioning}},
   year      = {2016},
