--- a/lipics/disc20repartition.tex
+++ b/lipics/disc20repartition.tex
@@ -79,24 +79,45 @@
 \newcommand{\dbB}{NB}
 \newcommand{\dbC}{MG}
 
+\newcommand\stefan[1]{{\color{blue}\textbf{Stefan: #1 }}}
+
 %commands for input sequence diagrams
 \newcommand{\request}[3]{\draw (axis cs:#3,#1) -- node[left]{} (axis cs:#3,#2);}
 
 \bibliographystyle{plainurl}% the mandatory bibstyle
 
-\title{Polynomial Time Competitive Repartitioning of Dynamic Graphs} %TODO Please add
+\title{Online Balanced Repartitioning 
+of Dynamic Graphs in Polynomial Time} %TODO Please add
 
-\titlerunning{Dummy short title} %TODO optional, please use if title is longer than one line
+\titlerunning{Polynomial-time Repartitioning} %TODO optional, please use if title is longer than one line
 
-\author{Tobias Michael Forner}{Technical University of Munich, Germany }{}{}{}%TODO mandatory, please use full name; only 1 author per \author macro; first two parameters are mandatory, other parameters can be empty. Please provide at least the name of the affiliation and the country. The full address is optional
+\author{Tobias Michael Forner}{Technical University of Munich, Germany}{}{}{}%TODO
+\author{Harald Räcke}{Technical University of Munich, Germany}{}{}{}%TODO
+\author{Stefan Schmid}{University of Vienna, Austria}{}{}{}%TODO
 
-\authorrunning{T.\,M. Forner} %TODO mandatory. First: Use abbreviated first/middle names. Second (only in severe cases): Use first author plus 'et al.'
+\authorrunning{Forner et al.} %TODO mandatory. First: Use abbreviated first/middle names. Second (only in severe cases): Use first author plus 'et al.'
 
-\Copyright{Tobias Michael Forner} %TODO mandatory, please use full first names. LIPIcs license is "CC-BY";  http://creativecommons.org/licenses/by/3.0/
+\Copyright{} %TODO mandatory, please use full first names. LIPIcs license is "CC-BY";  http://creativecommons.org/licenses/by/3.0/
 
-\ccsdesc[100]{\textcolor{red}{Replace ccsdesc macro with valid one}} %TODO mandatory: Please choose ACM 2012 classifications from https://dl.acm.org/ccs/ccs_flat.cfm 
+\begin{CCSXML}
+<ccs2012>
+   <concept>
+       <concept_id>10003752.10003809.10010047</concept_id>
+       <concept_desc>Theory of computation~Online algorithms</concept_desc>
+       <concept_significance>500</concept_significance>
+       </concept>
+   <concept>
+       <concept_id>10010520.10010521.10010537</concept_id>
+       <concept_desc>Computer systems organization~Distributed architectures</concept_desc>
+       <concept_significance>500</concept_significance>
+       </concept>
+ </ccs2012>
+\end{CCSXML}
 
-\keywords{Dummy keyword} %TODO mandatory; please add comma-separated list of keywords
+\ccsdesc[500]{Theory of computation~Online algorithms}
+\ccsdesc[500]{Computer systems organization~Distributed architectures}
+
+\keywords{Online algorithms, graph partitioning, migration, competitive analysis} %TODO mandatory; please add comma-separated list of keywords
 
 \category{} %optional, e.g. invited paper
 
@@ -107,7 +128,9 @@
 
 %\funding{(Optional) general funding statement \dots}%optional, to capture a funding statement, which applies to all authors. Please enter author specific funding statements as fifth argument of the \author macro.
 %TODO add acknowledgements
-\acknowledgements{I want to thank \dots}%optional
+\acknowledgements{Research supported by
+ERC Consolidator grant agreement No. 864228 (AdjustNet). 
+}%optional
 
 \nolinenumbers %uncomment to disable line numbering
 
@@ -133,11 +156,25 @@
 
 %TODO mandatory: add short abstract of the document
 \begin{abstract}
-This thesis studies the Dynamic Balanced Graph Partitioning problem, an online graph partitioning variant. The task is to maintain a mapping of communication nodes to servers while requests are revealed according to an unknown pattern. As the requests appear they need to be served, either remotely between nodes on different servers at cost one or locally within a server at cost zero. Before a request has to be served there is an option to change the mapping of nodes to servers, i.e. to migrate, at cost $\alpha$ per node move.
-
-We discuss different algorithmic approaches and the respective implications for the competitive analysis.
-
-Our main contribution is a  polynomial-time deterministic algorithm for this problem which achieves a competitive ratio of $O(2/\epsilon\cdot k\log k)$. We analyze and empirically evaluate this algorithm, also by comparison with another algorithm variant and with existing implementations. 
+This paper revisits the online balanced repartitioning problem
+(introduced by Avin et al. at DISC 2016) which asks for a scheduler
+that dynamically collocates frequently communicating nodes,
+in order to reduce communication costs 
+while minimizing migrations in distributed systems. 
+More specifically, communication requests arrive online and 
+need to be served, either remotely across different servers, 
+or locally within a server at no cost; before serving a 
+request, the online scheduler 
+can change the mapping of nodes to servers, i.e., migrate nodes, 
+at cost $\alpha$ per node move.
+Avin et al. presented a deterministic $O(n \log n)$-competitive
+algorithm in a research augmentation model, which is optimal
+up to a logarithmic factor; however, their algorithm has the drawback
+that it relies on expensive repartitioning operations which result in
+a super-polynomial runtime.
+Our main contribution is a different deterministic algorithm which achieves the same
+competitive ratio, but runs in polynomial time.  This algorithm is analyzed both
+analytically and empirically.
 \end{abstract}
 
 \pgfplotstableread[row sep=\\,col sep=&]{
@@ -207,34 +244,92 @@ Our main contribution is a  polynomial-time deterministic algorithm for this pro
 
 \section{Introduction}
 
-With the continually increasing importance of distributed and cloud computation it is of great importance to minimize the communication overhead due to the increased network load. One method for achieving such improvements is to relocate communication partners (e.g. virtual machines) that communicate or interact frequently on the same servers. This way expensive and slow inter-server communication can be minimized by handling this communication within a server, without generating network load.
+Most distributed systems critically rely on an efficient
+interconnecting communication network. With the 
+increasing scale of these systems, the network traffic often grows accordingly:
+applications related to distributed machine learning, 
+batch processing, or scale-out databases, spend 
+a considerable fraction of their runtime shuffling data \cite{todo}.
+An interesting method to improve the efficiency in these 
+systems is to exploit their resource allocation flexibilities:
+many distributed systems are highly virtualized today and 
+support to relocate (or migrate) communication partners (e.g. virtual machines).
+By collocating two frequently communicating nodes on the same server,
+slow and costly inter-server communication can be reduced.
+However, relocations also come at a cost, and the number of migrations
+should be kept low accordingly.
 
-As communication patterns may change over time it seems especially promising to develop algorithms which adapt this distribution of communication partners over time, i.e. in a dynamic fashion.
+This paper revisits the Dynamic Balanced Graph Partitioning (DBGP) problem 
+\cite{Avin2016} which models the tradeoff between the benefits
+and the costs of dynamic relocations. The goal is to design an algorithm 
+which maintains, at any time, a mapping of $n$ communication nodes (virtual machines) to $\ell$ servers of fixed equal size $k$; in the absence of augmentation,
+$n=\ell k$, \stefan{please check:} whereas in the variant with augmentation,
+the server size is increased by a factor $1/\epsilon$ for
+some $\epsilon>0$. The communication pattern can be seen as a dynamic
+graph, from which communication requests arrive in an online manner;
+in other words, the online algorithm does not have prior knowledge of future communication requests. The goal is to strike a balance between the benefits
+and the costs of migrations.
+More specifically, the cost model is as follows: 
+if a communication request is served remotely, i.e., between nodes mapped to different servers, it incurs a communication cost of 1;
+communication requests between nodes located on the same server 
+are free of cost. Before the cost for the current request is payed, an algorithm has the option to migrate nodes at a cost of $\alpha$ for each node move.
 
-The Dynamic Balanced Graph Partitioning (DBGP) problem (\cite{Avin2015, Avin2016}) which we study in this thesis provides a suitable model for these situations. Here algorithms are tasked to provide a mapping of communication nodes (virtual machines) to servers of fixed equal size and to dynamically adapt this mapping as new communication requests are revealed in an online manner, i.e. without prior knowledge of future requests. The goal is then to provide algorithms that maintain such a mapping while minimizing communication and migration costs.
-
-In our model, a communication request can be served remotely, i.e. between nodes mapped to different servers, at cost one or locally if both nodes are located on the same server at no cost. Before the cost for the current request is payed, an algorithm has the option to migrate nodes at a cost of $\alpha$ for each node move.
-
-This problem has a variety of interesting challenges and properties (\cite{Avin2016}):
-\begin{itemize}
-	\item \textbf{Rent or buy} (\cite{Epstein2014}): should a request be served remotely at a small cost (rent) or should the communicating nodes be collocated at a large cost up-front (buy)?
-	\item \textbf{How should nodes be collocated?} If there are nodes which communicate frequently it seems advantageous to collocate them. Then the question is how to define such a threshold and also which nodes should be moved in order to migrate as little as possible.
-	\item \textbf{Should nodes be evicted?} If nodes are to be collocated there might not be enough space left in a suitable target server. In this case it needs to be decided which other nodes should be evicted from the target server.
-\end{itemize}
-
-
+The problem is known to combine different aspects of classic online
+problems such as \textbf{rent or buy} \cite{Epstein2014}
+(should a request be served remotely at a small cost (rent) or should the communicating nodes be collocated at a large cost up-front (buy)?),
+or \textbf{paging} (which existing node to ``evict'' 
+if two nodes are to be collocated on the same server?).
+Indeed, in some respect the problem can be seen as
+a symmetric version of caching: two nodes can be ``cached''
+together on any server.
 
 \subsection{Contributions}
 
-We study the Dynamic Balanced Graph Partitioning problem and show a competitive ratio of $O(2/\epsilon\cdot k\log k)$ for our component-based deterministic algorithm \crep{} in the variant \adjDel{} which runs in polynomial time. We also discuss challenges in the competitive analysis of this algorithm and of another algorithm, \coreDel, for which we have not shown a competitive ratio. Both approaches are adaptations of prior work (\cite{Avin2015, Avin2016}). Previous algorithms had super-polynomial running time.
+Our main result is a deterministic online algorithm \adjDel{}
+for the dynamic balanced graph partitioning problem 
+which achieves a competitive ratio of $O(k\log k)$
+and runs in polynomial time, for a constant augmentation. 
 
-Our connectivity-based approach to the definition of components allows to achieve a polynomial running time.
+A $O(k\log k)$-competitive algorithm was already given by 
+Avin et al. in \cite{Avin2016}, together with an almost tight lower bound
+$\Omega(k)$. However, the algorithm relies on expensive repartitioning
+which results in a super-polynomial runtime.   
 
-We discuss the details of our implementation which uses a decomposition tree data structure in order to reduce the update times when recomputing the components upon receiving new requests.
+We not only evaluate our algorithm analytically but also in simulations,
+based on real workloads. 
+To this end, 
+we also perform algorithm engineering and make 
+slight adaptations of our algorithms in order to improve their results.
+We further present a second algorithm, \coreDel, 
+an efficient heuristic which serves us as a baseline for comparison,
+and which may be of independent interest. 
 
-We evaluate our implementation and compare it with \coreDel{} that is also based on components, but for which we have not shown a competitive ratio. Furthermore we compare it with two existing implementations in the METIS and ParMETIS framework and we explore first ideas of adjusting parameters to improve the results of the presented algorithms even further.
+\subsection{Preliminaries}
+
+Let us introduce some 
+definitions and notations 
+that will be used throughout the paper.
+We define a graph $G=(V, E, w)$ 
+where $V$ is the set of vertices,
+$E$ the set of (undirected) edges,
+and $w:E \rightarrow \mathbb{N}$ assigns each edge an (integer) weight.
+Given a graph $G=(V,E,w)$,
+we define an \textit{(edge) cut} of $G$ as a pair of 
+two disjoint subsets $X,Y$ of $V$ such that $X\cup Y=V$. 
+The value of this cut is the sum of the weight of edges between 
+nodes from $X$ and $Y$, i.e. $\sum_{e=\{u,v\}\in E:u\in X, v\in Y}w(e)$ is the value of the cut $(X,Y)$. Note that such a cut can also be defined by the set of the edges connecting $X$ and $Y$ that are cut. We call a cut a \textit{minimum (edge) cut} of $G$ if it is one of the cuts with minimum value.
+
+The \textit{connectivity} of a graph $G$ is equal to the value of a minimum edge cut of $G$. This definition will be used in order to define the communication components our algorithm maintains as these are subsets of $V$ which induce subgraphs of high connectivity. We explain the concept of components in greater detail later.
+
+Furthermore we define the term $(s,t)$\textit{-cut} as a cut $(X,Y)$ for which $s\in X$ and $Y\in X$, i.e. a $(s,t)$-cut separates the nodes $s$ and $t$ in $G$. Then a \textit{minimum $(s,t)$-cut} is a $(s,t)$-cut of minimum value. Note that a minimum $(s,t)$-cut is not necessarily a minimum cut.
+
+Finally we call an injective function $m:X\rightarrow Y$ a \textit{mapping of $X$ to $Y$}. We use this terminology for example when we talk about the assignment of nodes to servers.
+
 
 \subsection{Organization}
+
+The remainder of this paper is organized
+as follows. \stefan{fixme}
 
 We first introduce general definitions and notation in \cref{gen_def_section} which we will use throughout this thesis. 
 We then formally define the Dynamic Balanced Graph Partitioning (DBGP) problem in \cref{problem_definition_section}. 
@@ -245,35 +340,18 @@ After that we empirically evaluate our algorithms by comparing their results wit
 We summarize the results of this thesis in \cref{conclusion_section}.
 Finally we describe avenues for future work in \cref{future_work_section}.
 
-
-
-\section{General Definitions and Notation}
-
-\label{gen_def_section}
-
-In this section we introduce several definitions and notations that will be used throughout the thesis.
-
-First we define a graph $G=(V, E, [w])$ where $V$ is a set of vertices and $E\subseteq V \times V$ is a set of edges. $w:E \rightarrow \mathbb{N}$ assigns each edge an (integer) weight. Note that we always assume that a graph is undirected, i.e. edges are of the form $\{u,v\}$ where $u\neq v$ and $u,v\in V$. A graph is only unweighted or directed if it is explicitly mentioned or clear from the context.
-
-Given a graph $G=(V,E,w)$ we define an \textit{(edge) cut} of $G$ as a pair of two disjoint subsets $X,Y$ of $V$ such that $X\cup Y=V$. The value of this cut is then the sum of the weight of edges between nodes from $X$ and $Y$, i.e. $\sum_{e=\{u,v\}\in E:u\in X, v\in Y}w(e)$ is the value of the cut $(X,Y)$. Note that such a cut can also be defined by the set of the edges connecting $X$ and $Y$ that are cut. We call a cut a \textit{minimum (edge) cut} of $G$ if it is one of the cuts with minimum value.
-
-We use this definition of a minimum cut to introduce the notion of \textit{connectivity}. The connectivity of a graph $G$ is equal to the value of a minimum edge cut of $G$. This definition will be used in order to define the communication components our algorithm maintains as these are subsets of $V$ which induce subgraphs of high connectivity. We explain the concept of components in greater detail in \cref{algIdeas}.
-
-Furthermore we define the term $(s,t)$\textit{-cut} as a cut $(X,Y)$ for which $s\in X$ and $Y\in X$, i.e. a $(s,t)$-cut separates the nodes $s$ and $t$ in $G$. Then a \textit{minimum $(s,t)$-cut} is a $(s,t)$-cut of minimum value. Note that a minimum $(s,t)$-cut is not necessarily a minimum cut.
-
-Finally we call an injective function $m:X\rightarrow Y$ a \textit{mapping of $X$ to $Y$}. We use this terminology for example when we talk about the assignment of nodes to servers.
-
-
-\section{Problem Definition}
+\section{Model}
 \label{problem_definition_section}
 
-Avin et al. (\cite{Avin2016}) first introduced the Dynamic Balanced Graph Partitioning problem under the name of \textit{Balanced RePartitioning} (BRP) problem, but changed the name to the former in a more recent version of their paper (\cite{Avin2015}).
-
-The task is to maintain a partitioning of a dynamic graph consisting of $n=k\cdot l$ nodes that communicate with each other into $l$ parts, each of size $k$ while minimizing both the cost due to communication and due to node migrations defined as follows. 
-
-The communication cost is zero if both nodes are located on the same server at the time the request needs to be served and it is normalized to one if they are mapped to different servers. An algorithm may perform node migrations in order to change the mapping of nodes to servers prior to serving the communication request at time $t$. Each move of a vertex incurs cost $\alpha>1$.
-
-More formally we are given $l$ servers $V_0,...,V_{l-1}$, each with capacity $k$ and an initial perfect mapping of $n=k\cdot l$ nodes to the $l$ servers, i.e. each server is assigned exactly $k$ nodes. An input sequence $\sigma=(u_1, v_1), (u_2, v_2),...(u_i,v_i),...$ describes the sequence of communication requests: the pair $(u_t, v_t)$ represents a communication request between the nodes $u_t$ and $v_t$ arriving at time $t$. At time $t$ the algorithm is allowed to perform node migrations at a cost of $\alpha>1$ per move. After the migration step, the algorithm pays cost 1 if $u_t$ and $v_t$ are mapped to different servers and does not pay any cost otherwise. Note that an algorithm may also choose to perform no migrations at all.
+We consider the problem of maintaining a partitioning of a dynamic graph 
+consisting of $n=k\cdot \ell$ nodes that communicate with each other 
+into $\ell$ clusters, each of size $k$, while minimizing both the cost due to communication and due to node migrations. 
+More formally we are given \stefan{Herr Forner, bitte ersetzen
+Sie ueberall $l$ mit $\ell$.} $l$ servers $V_0,...,V_{l-1}$, 
+each with capacity $k$ and an initial perfect mapping of $n=k\cdot l$ nodes to the $l$ servers, i.e. each server is assigned exactly $k$ nodes. An input sequence $\sigma=(u_1, v_1), (u_2, v_2),...(u_i,v_i),...$ describes the sequence of communication requests: the pair $(u_t, v_t)$ represents a communication request between the nodes $u_t$ and $v_t$ arriving at time $t$. At time $t$ the algorithm is allowed to perform node migrations at a cost of $\alpha>1$ per move. After the migration step, the algorithm pays cost 1 if $u_t$ and $v_t$ are mapped to different servers and does not pay any cost otherwise. Note that an algorithm may also choose to perform no migrations at all.
+This problem was introduced by Avin et al. \cite{Avin2016} (DISC 2016)
+and is known as the dynamic balanced graph partitioning problem,
+also known as online balanced repartitioning.
 
 We are in the realm of competitive analysis and as a result we compare an online algorithm \onl{} to the optimal offline algorithm \opt{}. \onl{} only learns of the requests in the input sequence $\sigma$ as they happen and as a result only knows about the partial sequence $(u_1,v_1),...,(u_t,v_t)$ at time $t$ whereas \opt{} has perfect knowledge of the complete sequence $\sigma$ at all times.
 
@@ -287,71 +365,9 @@ where $\onl{}(\sigma)$ and $\opt{}(\sigma)$ denote the cost of serving input seq
 
 We allow the online algorithm to use larger capacities per server. In this case we speak of an \textit{augmentation} of $\delta$ in the case where the online algorithm is allowed to assign $\delta\cdot n/k$ nodes to each server where $\delta>1$. This augmented online algorithm is then compared with the optimal offline algorithm \opt{} which is not allowed to use any augmentation.
 
-\section{Related Work}
-\label{related_work_section}
-
-With the ever increasing importance of distributed computation systems also come new challenges. One such challenge is an increase in network traffic. This increased network load may impact the performance of cloud computing networks significantly and should hence be minimized. For example, studies (\cite{Ghobadi2016, Hamedazimi2014}) have shown that reconfigurable datacenter networks can provide performance similar to regular datacenter networks while having significantly lower cost in some cases.
-
-This suggests that there is great potential in exploring methods of designing and controlling dynamic networks in order to reduce the overall network load.
-
-One avenue of reducing this network load and hence also increasing the performance of cloud applications is to relocate the different communication partners inside the network dynamically in order to reduce the volume of inter-server communication.
-
-
-\subsection{Dynamic Balanced RePartitioning}
-Avin et al. (\cite{Avin2015}) initiated the study of the Dynamic Balanced Graph Partitioning (DBGP) problem that is the topic of this thesis. They propose a deterministic algorithm for the DBGP problem with augmentation $2+\epsilon$ for any $\epsilon>1/k$ that takes exponential time. 
-
-They also show a lower bound of $k-1$ for the competitive ratio of any online algorithm for the Dynamic Balanced Graph Partitioning problem on two clusters via a reduction to online paging. 
-
-Furthermore they show that no $\delta$-augmented deterministic online algorithm can achieve a competitive ratio smaller than $k$ for any augmentation $\delta<l$.	
-
-\subsection{Restricted Variants of Balanced RePartitioning}
-Restricted variants of the Balanced RePartitioning problem have also been studied. Here one assumes certain restrictions of the input sequence $\sigma$ and then studies online algorithms for these cases. 
-
-Avin, Cohen, Parham and Schmid (\cite{Avin2018}) study one such case: the authors assume that an adversary provides requests according to a fixed distribution of which the optimal algorithm \opt{} has knowledge while an online algorithm that is compared with \opt{} has not. Further they restrict the communication pattern to form a ring-like pattern, i.e. for the case of $n$ nodes $0,...,n-1$ only requests $r$ of the form $r=\{i \mod n, (i+1)\mod n\}$ are allowed. For this case they present a competitive online algorithm which achieves a competitive ratio of $O(\log n)$ with high probability.	
-
-Henzinger, Neumann and Schmid (\cite{Henzinger2019}) study a special \textit{learning variant} of the Dynamic Balanced Graph Partitioning problem specified above. In this version it is assumed that the input sequence $\sigma$ eventually reveals a perfect balanced partitioning of the $n$ nodes into $l$ parts of size $k$ such that the edge cut is zero. In this case the communication patterns reveal connected components of the communication graph of which each forms one of the partitions. Algorithms are tasked to \textit{learn} this partition and to eventually collocate nodes according to the partition while minimizing communication and migration costs.
-
-The authors of \cite{Henzinger2019} present an algorithm for the case where the number of servers is $l=2$ that achieves a competitive ratio of $O((\log n)/\epsilon)$ with augmentation $\epsilon$, i.e. each server has capacity $(1+\epsilon)n/2$ for $\epsilon\in(0,1)$.
-
-For the general case of $l$ servers of capacity $(1+\epsilon)n/l$ the authors construct an exponential-time algorithm that achieves a competitive ratio of $O((l\log n \log l)/\epsilon)$ for $\epsilon\in(0,1/2)$ and also provide a distributed version.
-Additionally the authors describe a polynomial-time $O((l^2\log n\log l)/\epsilon^2)$-competitive algorithm for the case with general $l$, servers of capacity $(1+\epsilon)n/l$ and $\epsilon\in(0,1/2)$.
-
-It is important to stress that the assumption that the requests reveal a perfect partitioning of the communication nodes is not applicable for most practical applications and thus it is important to study the general DBGP problem without restricting $\sigma$.
-
-
-\subsection{Clustering}
-
-Clustering is the process of generating subsets of elements with high similarity (\cite{Hartuv2000}). Desirable properties are \textit{homogeneity}, i.e. high similarity within elements of a cluster and that the similarity is low between elements of different clusters, a property called \textit{separation}. Hartuv and Shamir (\cite{Hartuv2000}) approach this problem by constructing a similarity graph and then separating the nodes via repeated computations of minimum edge cuts. This approach is quite similar to the one we use in order to determine sub-graphs of high connectivity of the communication graph induced by the requests.
-
-Clustering has also been studied within a variety of other different contexts and approaches from data mining to image segmentation (\cite{Benabdellah2019, Wu1993, Pavana}).
-
-However, we consider an online problem, i.e. algorithms need to react dynamically to changes in the graph and need to maintain their data structures and adapt accordingly whereas clustering considers complete data sets which are static.
-
-
-\subsection{Online Paging}
-In the Online Paging problem (\cite{Fiat2002}, \cite{Epstein2011}) one is given a scenario with a fast cache of $k$ pages and $n-k$ pages in slow memory. Pages are requested in an online manner, i.e. without prior knowledge of future requests. If a requested page is in the cache at the time of the request it can be served without cost. If it is in slow memory however, then a \textit{page fault} occurs and the requested page needs to be moved into the cache. If the cache is full then a page from the cache needs to be evicted, i.e. moved to the slow memory in order to make space for the requested one. The goal is to design algorithms which minimize the number of such page faults. 
-
-The Dynamic Balanced Graph Partitioning problem can be seen as a generalization of Online Paging. In fact, Avin et al. (\cite{Avin2015}) have shown a reduction of Online Paging to this problem.
-
-However, the standard version of Online Paging has no equivalent to the option of serving a request remotely as is possible in the Dynamic Balanced Graph Partitioning problem. The variant \textit{with bypassing} allows an algorithm to access pages in slow memory without moving them into the cache, thus providing such an equivalent. It is worth stressing however that in our problem requests involve two nodes while in Online Paging the nodes themselves are requested.
-
-
-\subsection{Static Balanced Graph Partitioning}
-The Static Balanced Graph Partitioning problem is the static offline variant of the topic of this thesis. In this version an algorithm may not perform any migrations, but has perfect knowledge of the request sequence $\sigma$ and then needs to provide a perfectly balanced partitioning of the $n=k\cdot l$ nodes into $l$ sets of equal size $k$ that minimizes cost, i.e. the weight of edges between the servers. This scenario can be modelled as a graph partitioning problem where the weight of an edge corresponds to the number of requests between its end points in the input sequence $\sigma$. 
-
-An algorithm then has to provide a partition of the nodes into sets of exactly $k$ nodes each while minimizing the total edge weights between partitions, i.e. an algorithm needs to minimize the edge cut of the graph.  
-
-This problem is NP-complete (\cite{Andreev2006}) and for the case where $l\geq 3$, Andreev and R\"acke (\cite{Andreev2006}) have shown that there is no polynomial time approximation algorithm which guarantees a finite approximation factor unless P=NP.
-
-\subsection{Fast Algorithms and Heuristics}
-
-There are several algorithms and frameworks for graph partitioning problems. Usually these frameworks employ heuristics in order to achieve their results. The most successful such heuristic is \textit{Multilevel Graph Partitioning} (\cite{Buluc2016}). This method consists of three phases. Initially the graph is repeatedly coarsened into a hierarchy of smaller graphs in such a way that cuts in the coarse graphs also correspond to cuts in the finer graphs. On the coarsest level a (potentially expensive) algorithm is used in order to compute an initial partition. This partitioning is then transferred to the finer graphs. In this process one usually uses other local heuristics in order to improve the partition quality even further with every step.
-
-METIS (\cite{Karypis1998, Karypis1998a}) and Jostle (\cite{Walshaw2000, walshaw2007jostle}) are examples of libraries that utilize this multilevel approach. We choose METIS as a reference for our empirical evaluation.
-
-
 \section{Algorithmic Ideas}
 \label{algIdeas}
+
 In this section we describe two different solution approaches to the Dynamic Balanced Graph Partitioning problem. We call these approaches \coreDel{} and \nl\adjDel{}. Both approaches are inspired by the versions of the \crep{} algorithm in \cite{Avin2015} and \cite{Avin2016}. We first describe the general approach that is common to both algorithms and then address the specific differences and analysis ideas.
 
 Both methods share a similar concept at their core: a second-order partitioning of the communication nodes into \textit{communication components} which represent node-induced sub-graphs of the original communication graph given by the requests from the input sequence $\sigma$. As more requests from $\sigma$ are revealed to the algorithms they merge the corresponding components once they are suitably connected and relocate the nodes of the new component in such a way that all the nodes of a component are always located on the same server.
@@ -1473,22 +1489,49 @@ Finally \cref{runTimePlotMetis} illustrates the run times of \adapt{} and \stati
 	\caption{comparison of running time of \adapt{} and \static{}}\label{runTimePlotMetis}
 \end{figure}
 
-%\clearpage
-\begin{samepage}
-	
-	\section{Conclusion}
-	\label{conclusion_section}
-	
-	We have discussed different ideas for component-based algorithms for the Dynamic Balanced Graph Partitioning Problem as well as the corresponding implications and challenges for the competitive analysis. 
-	
-	We have shown that our algorithm \adjDel{} has a competitive ratio of $O(2/\epsilon\cdot k\log k)$ and we have presented our decomposition-based approach to its implementation. 
-	
-	Finally we have evaluated the results of our implementation by comparing it with three other algorithms: \coreDel{} which is a variation of \adjDel{} which deletes fewer edges and \adapt{} and \static{} which are available via METIS and ParMETIS frameworks, respectively. Furthermore we have explored the possibility of making slight adaptations of our algorithms in order to improve their results.
-\end{samepage}
+\section{Related Work}
+\label{related_work_section}
+
+The closest work to ours is by Avin et al. \cite{Avin2015} 
+who initiated the study of the dynamic balanced graph partitioning 
+problem. The authors propose a $O(k \log k)$-competitive algorithm 
+with augmentation $2+\epsilon$ for any $\epsilon>1/k$ that takes exponential time. 
+They also show a lower bound of $k-1$ for the competitive ratio of any online algorithm 
+on two clusters via a reduction to online paging. 
+Restricted variants of the balanced repartitioning problem have also been studied. Here one assumes certain restrictions of the input sequence $\sigma$ and then studies online algorithms for these cases. 
+Avin et al. \cite{Avin2018} 
+assume that an adversary provides requests according to a fixed distribution of which the optimal algorithm \opt{} has knowledge while an online algorithm that is compared with \opt{} has not. Further they restrict the communication pattern to form a ring-like pattern, i.e. for the case of $n$ nodes $0,...,n-1$ only requests $r$ of the form $r=\{i \mod n, (i+1)\mod n\}$ are allowed. For this case they present a competitive online algorithm which achieves a competitive ratio of $O(\log n)$ with high probability.	
+Henzinger et al. \cite{Henzinger2019} 
+study a special \textit{learning variant} of the problem 
+where it is assumed that the input sequence $\sigma$ eventually reveals a perfect balanced partitioning of the $n$ nodes into $l$ parts of size $k$ such that the edge cut is zero. In this case the communication patterns reveal connected components of the communication graph of which each forms one of the partitions. Algorithms are tasked to \textit{learn} this partition and to eventually collocate nodes according to the partition while minimizing communication and migration costs.
+The authors of \cite{Henzinger2019} present an algorithm for the case where the number of servers is $l=2$ that achieves a competitive ratio of $O((\log n)/\epsilon)$ with augmentation $\epsilon$, i.e. each server has capacity $(1+\epsilon)n/2$ for $\epsilon\in(0,1)$.
+For the general case of $l$ servers of capacity $(1+\epsilon)n/l$ the authors construct an exponential-time algorithm that achieves a competitive ratio of $O((l\log n \log l)/\epsilon)$ for $\epsilon\in(0,1/2)$ and also provide a distributed version.
+Additionally the authors describe a polynomial-time $O((l^2\log n\log l)/\epsilon^2)$-competitive algorithm for the case with general $l$, servers of capacity $(1+\epsilon)n/l$ and $\epsilon\in(0,1/2)$.
+
+More generally, clustering has been studied within a variety of
+different contexts 
+from data mining to image segmentation \cite{Benabdellah2019, Wu1993, Pavana},
+and is the process of generating subsets of elements with high similarity 
+\cite{Hartuv2000}. 
+However, we consider an online problem, i.e. algorithms need to react dynamically to changes in the graph and need to maintain their data structures and adapt accordingly whereas clustering considers complete data sets which are static.
+
+The dynamic balanced graph partitioning problem 
+can be seen as a generalization (or symmetric version) of online paging.
+In the online paging problem \cite{Fiat2002}, \cite{Epstein2011}
+ one is given a scenario with a fast cache of $k$ pages and $n-k$ pages in slow memory. Pages are requested in an online manner, i.e. without prior knowledge of future requests. If a requested page is in the cache at the time of the request it can be served without cost. If it is in slow memory however, then a \textit{page fault} occurs and the requested page needs to be moved into the cache. If the cache is full then a page from the cache needs to be evicted, i.e. moved to the slow memory in order to make space for the requested one. The goal is to design algorithms which minimize the number of such page faults.
+However, the standard version of online paging has no equivalent to the option of serving a request remotely as is possible in the Dynamic Balanced Graph Partitioning problem. The variant \textit{with bypassing} allows an algorithm to access pages in slow memory without moving them into the cache, thus providing such an equivalent. It is worth stressing however that in our problem requests involve two nodes while in Online Paging the nodes themselves are requested.
+
+The static balanced graph partitioning problem is the static offline variant of the topic of this thesis. In this version an algorithm may not perform any migrations, but has perfect knowledge of the request sequence $\sigma$ and then needs to provide a perfectly balanced partitioning of the $n=k\cdot l$ nodes into $l$ sets of equal size $k$ that minimizes cost, i.e. the weight of edges between the servers. This scenario can be modelled as a graph partitioning problem where the weight of an edge corresponds to the number of requests between its end points in the input sequence $\sigma$. 
+An algorithm then has to provide a partition of the nodes into sets of exactly $k$ nodes each while minimizing the total edge weights between partitions, i.e. an algorithm needs to minimize the edge cut of the graph.  
+This problem is NP-complete (\cite{Andreev2006}) and for the case where $l\geq 3$, Andreev and R\"acke (\cite{Andreev2006}) have shown that there is no polynomial time approximation algorithm which guarantees a finite approximation factor unless P=NP.
+
+There are several algorithms and frameworks for graph partitioning problems. Usually these frameworks employ heuristics in order to achieve their results. The most successful such heuristic is \textit{Multilevel Graph Partitioning} (\cite{Buluc2016}). This method consists of three phases. Initially the graph is repeatedly coarsened into a hierarchy of smaller graphs in such a way that cuts in the coarse graphs also correspond to cuts in the finer graphs. On the coarsest level a (potentially expensive) algorithm is used in order to compute an initial partition. This partitioning is then transferred to the finer graphs. In this process one usually uses other local heuristics in order to improve the partition quality even further with every step.
+
+METIS (\cite{Karypis1998, Karypis1998a}) and Jostle (\cite{Walshaw2000, walshaw2007jostle}) are examples of libraries that utilize this multilevel approach. We choose METIS as a reference for our empirical evaluation.
 
 \section{Future Work}
-\label{future_work_section}
-
+	\label{conclusion_section}
+	
 Even though we have already shown very promising results as to the overall performance of our algorithms together with theoretical guarantees there are still areas in which our work could be expanded upon.
 
 As discussed in \cref{alphaInf} we see great potential in making adjustments to our algorithms, especially \coreDel{}, in order to improve their results even further while also preserving our result on the competitive ratio.
